testsuite/tests/linear/should_fail/LinearSequenceExpr.stderr

LinearSequenceExpr.hs:7:3: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘x’
    • In an equation for ‘f’: f x y = [x .. y]

LinearSequenceExpr.hs:7:5: error: [GHC-18872]
    • Couldn't match type ‘Many’ with ‘One’
        arising from multiplicity of ‘y’
    • In an equation for ‘f’: f x y = [x .. y]
